# rules_haskell_coverage_failure

./: BUILD.bazel  Foo.hs  WORKSPACE.bazel
